vertical align fix

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -191,8 +191,10 @@ table.hosts_table {
 		font-size: 18px;
 		tr {
 			height: 100px;
-			line-height: 100px;
 			border-bottom: 1px solid #c6c6c6;
+			td {
+				vertical-align: middle;
+			}
 		}
 	}
 }
